fix(home): duplicate narrow section in order to place the button under the image on mobile devices / center image on mobile devices (DA_UK-370)

--- a/packages/pages/home/src/home.module.css
+++ b/packages/pages/home/src/home.module.css
@@ -3,10 +3,34 @@
 }
 
 .narrowSection {
+  margin-bottom: var(--spacing-l);
+
   @media (--m) {
     margin: 0 auto;
     max-width: 75%;
     width: 100%;
+  }
+}
+
+.narrowSection button {
+  display: none;
+
+  @media (--s) {
+    display: inline-block;
+  }
+}
+
+.narrowSection img {
+  margin: 0 auto;
+
+  @media (--s) {
+    margin: 0;
+  }
+}
+
+.narrowSectionMobileOnly {
+  @media (--s) {
+    display: none;
   }
 }
 
